[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ai_stylist_demo"
version = "0.0.1"
description = "AI-assistant stylist demo applying Gen AI"
authors = [
  { name = "Sal Puglisi" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["ai_stylist_demo"]
force_sort_within_sections = true
